--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 
 
+
   <center>
       <img src="http://www.seoulmart.co.kr/goodsImg/goods_small_1178169466_0.jpg" alt="오뉴메인사진">
 
@@ -23,8 +24,12 @@
 
 		<form name="dial" method="get" action="1.php">
 			  ID(학번):  <input type = "text" name = "studentID"></br></br>
+				<input type="hidden" name="hour" value="20"> <!--매 게임마다 수동으로 바꿔주자 -->
+				<input type="hidden" name="min" value="52">
+				<input type="hidden" name="sec" value="00">
+		   <input type="image" src="start1.jpg" alt="시작버튼">
 
-		             <input type="image" src="start1.jpg" alt="시작버튼">
+
 		</form>
 
   </center>
